syntax = "proto3";

package cloud.lianmi.im.user;
option go_package = "github.com/lianmi/servers/api/proto/user";


//同步其他终端修改资料事件
//当前登录用户在其它端修改自己的个人资料之后，触发该事件
message SyncUpdateProfileEventRsp{
  //更新时间戳
  //是否必填-是
  fixed64 timeTag=1;
  //采用字典表方式提交更新内容 key定义成枚举(UserFieldEnum)
  //取值范围：
  //Nick(1) - 昵称
  //Gender(2) - 性别
  //Avatar(3) - 头像
  //Label(4) - 签名
  //TrueName(5) - 实名
  //Email(6) - email
  //Ex(7) - 扩展信息
  //AllowType(8) - 添加好友验证方式
  //Province(9) - 省份
  //City (10) - 城市 
  //Area (11) - 区
  //Street (12) - 街道
  //Address (13) - 地址
  //IdentityCard (14) - 身份证
  //map的key为1到14的整数含义见上
  //是否必填-是
  map<int32,string> fields=2;
}